<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0f0f0f">

    <TextView
        android:id="@+id/incart_page_label"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="Оформление заказа"
        android:textColor="#1EFE01"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/incart_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:text="В корзине"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/incart_page_label" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/cart_summary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/incart_label" />

    <TextView
        android:id="@+id/cart_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="Итого:"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/cart_divider"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/cart_summary_cost"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text=""
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/cart_summary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cart_summary" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/cart_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/select_delivery_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:paddingBottom="16dp"
        android:text="Выбрать место доставки"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cart_divider" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/place_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/makeorder"
        app:layout_constraintTop_toBottomOf="@id/select_delivery_place"
        tools:context=".ui.MapsFragment" />

    <Button
        android:id="@+id/makeorder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button"
        android:text="Оформить заказ"
        android:textColor="#0F0F0F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.092"
        app:layout_goneMarginBottom="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>