...
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/short_item_image"
            app:layout_constraintTop_toBottomOf="@+id/short_item_name">

            <Button
                android:id="@+id/short_item_minus"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:height="24dp"
                android:text="-"
                android:textColor="@color/gray"
                android:textSize="24sp"></Button>
...
