...
    android:layout_gravity="start"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="15dp"
    android:layout_marginBottom="5dp"
    android:orientation="vertical"
    android:id="@+id/chat_list_item_container"
    android:focusable="true"
    android:clickable="true"
    android:background="#ffffff">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/interlocutor_avatar"
...
